# chatshit

./: README.md  pyproject.toml
chatshit/: __main__.py  app.py  client.py  delete_message_screen.py  loginscreen.py  mainscreen.py  member_list.py  message_list.py  server.py  styles.css
chatshit/network/: chatroom_server.py  client.py  proto.py  server.py
chatshit/screens/: chatroom_screen.py  client_screen.py  confirmation_screen.py  create_server_screen.py  delete_message_screen.py  home_screen.py  login_screen.py  loginscreen.py  mainscreen.py
chatshit/widgets/: chat_list.py  member_list.py  message_list.py  server_list.py
