[tool.poetry]
name = "chatshit"
version = "0.1.0"
description = "Worst chatroom ever"
authors = ["mark bragin <m4rk.brag1n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.54.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatshit = "chatshit.__main__:main"
